--- a/src/components/header/headerComponent.css
+++ b/src/components/header/headerComponent.css
@@ -1,7 +1,7 @@
 .section_header{
     height: 100vh;
     border: 2px solid black;
-    background: linear-gradient(to right, #0acfe0, #495ff4);
+    background: linear-gradient(to right, #0aa3e0, #495ff4);
 }
 
 .menu_header{
