--- a/src/components/header/headerComponent.css
+++ b/src/components/header/headerComponent.css
@@ -49,3 +49,17 @@
     color: white;
     font-size: 14px;
 }
+
+.icone_hero{
+    width: 60px;
+    height: 60px;
+}
+
+.link_hero{
+    border: 4px solid white;
+    width: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 40px auto;
+}
