--- a/src/components/header/headerComponent.css
+++ b/src/components/header/headerComponent.css
@@ -63,3 +63,28 @@
     align-items: center;
     margin: 40px auto;
 }
+
+
+
+
+.menu_list {
+    display: flex;
+    list-style: none;
+    justify-content: space-between;
+  }
+
+  
+  .menu_list_link {
+    display: flex;
+    text-decoration: none;
+    color: white;
+    text-transform: uppercase;
+    font-weight: 300;
+    text-align: center;
+    font-size: 14px;
+  }
+  .menu_list_link:hover {
+    font-weight: 400;
+    border-bottom: 2px solid #03b6fd;
+  }
+  
