--- a/src/components/quemSomos/quemSomos.css
+++ b/src/components/quemSomos/quemSomos.css
@@ -1,5 +1,5 @@
-.container {
-    height: 70vh;
+.o-que-fazemos-container {
+    height: 100vh;
     padding-left: 8vw;
     padding-right: 8vw;
     background-color: #f6f6f6;
@@ -9,12 +9,15 @@
     font-size: 2em;
     color: #585858;
     margin: 0;
-    padding-top: 2vh;
+    padding-top: 5vh;
+    padding-left: 8%;
+    
 }
 
 .content{
     display: flex;
     flex-direction: row;
+    margin-top: 15vh;
 
 }
 
