--- a/src/components/solucoes/solutionsComponent.css
+++ b/src/components/solucoes/solutionsComponent.css
@@ -2,8 +2,7 @@
     height: 100vh;
     width: 100vw;
     background-size: 100% 100%;
-    display: flex;
-    flex-direction: row;
+    
     
     
 }
@@ -12,21 +11,24 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin-top: 20vh;
+    margin-left: 15vw;
     height: 50vh;
     width: 70vw;
     background-color: #f6f6f6; opacity: 1.0;
 }
 
-.container-cover > h2{
+.container-solutions > h2{
+    margin: 0;
+    padding-left: 10%;
     color: white;
     font-weight: bold;
 }
 
 .container-cover{
-    
     height: 100vh;
     width: 100vw;
-    background-color: #08a2fe; opacity: 0.3;
+    
     
 }
 .container-box > container-inner-solutions{
