nome da class title para title_quem_somos

--- a/src/components/quemSomos/quemSomos.css
+++ b/src/components/quemSomos/quemSomos.css
@@ -5,7 +5,7 @@
     background-color: #f6f6f6;
 }
 
-.title > h2{
+.title_quem_somos > h2{
     font-size: 2em;
     color: #585858;
     margin: 0;
@@ -21,7 +21,7 @@
 
 }
 
-.texto > h3{
+.texto_quem_somos > h3{
     font-size: 1.5em;
     padding-top: 5%;
     
@@ -29,7 +29,7 @@
     color: #585858;
 }
 
-.texto{
+.texto_quem_somos{
     height: 250px;
     width: 750px;
 }
