--- a/src/components/quemSomos/quemSomos.css
+++ b/src/components/quemSomos/quemSomos.css
@@ -5,7 +5,7 @@
     background-color: #f6f6f6;
 }
 
-.title_quem_somos > h2{
+.title_quem_somos{
     font-size: 2em;
     color: #585858;
     margin: 0;
@@ -21,7 +21,7 @@
 
 }
 
-.texto_quem_somos > h3{
+.texto_quem_somos{
     font-size: 1.5em;
     padding-top: 5%;
     
