--- a/src/components/solucoes/solutionsComponent.css
+++ b/src/components/solucoes/solutionsComponent.css
@@ -1,3 +1,4 @@
+
 .container-solutions{
     height: 100vh;
     width: 100vw;
@@ -7,6 +8,15 @@
     
 }
 
+
+
+.title_solucoes{
+    font-size: 2em;
+    color: #585858;
+    margin: 0;
+    padding-top: 5vh;
+    padding-left: 8%;
+}
 .container-box{
     display: flex;
     flex-direction: row;
@@ -36,3 +46,4 @@
     width: 70vw;
     background-color: #f6f6f6; opacity: 1.0;
 }
+
