--- a/src/components/solucoes/solutionsComponent.css
+++ b/src/components/solucoes/solutionsComponent.css
@@ -48,7 +48,37 @@
 */
 
 .section_solucoes{
-background: url('../../assets/imgs/img_solucoes.jpg') center center/cover
+    background: url('../../assets/imgs/img_solucoes.jpg') center center/cover
     no-repeat fixed padding-box rgba(67, 3, 7, 0.4);    width: 100%;
     height: 100vh;
+
+}
+
+
+.title_solucoes{
+    border: 2px solid white;
+    width:310px;
+    font-size: 2.5em;
+    color: white;
+    margin-left: 5%;
+}
+
+.container-box{
+    border: 2px solid yellow;
+    display: flex;
+    flex-direction: column;
+    justify-content: ;
+    
+    /*margin-top: 20vh;
+    margin-left: 15vw;*/
+    height: 100vh;
+    
+}
+
+.container-solutions{
+    width: 70%;
+    height: 70vh;
+    background-color: whitesmoke;
+    border-radius: 10px;
+    margin: 0px auto;
 }
