add nova branch dev

--- a/src/components/solucoes/solutionsComponent.css
+++ b/src/components/solucoes/solutionsComponent.css
@@ -46,6 +46,7 @@
     background-color: #f6f6f6; opacity: 1.0;
 }
 */
+/**/
 
 .section_solucoes{
     background: url('../../assets/imgs/img_solucoes.jpg') center center/cover
