--- a/src/components/solucoes/solutionsComponent.css
+++ b/src/components/solucoes/solutionsComponent.css
@@ -77,7 +77,7 @@
 }
 
 .container-solutions{
-    width: 70%;
+    width: 80%;
     height: 70vh;
     background-color: whitesmoke;
     border-radius: 10px;
@@ -91,22 +91,65 @@
 .box_solucoes1 {
     margin-top: 15vh;
     margin-left: 5vw;
+    border: 4px solid black;
+
 }
 
 .box_solucoes2 {
     margin-top: 15vh;
+    border: 4px solid black;
+
     
 }
 
 .box_solucoes3 {
     margin-top: 15vh;
     margin-right: 5vw;
+    border: 4px solid black;
+
 }
 
-.texto_solucoes1{
+.texto_solucoes1, .texto_solucoes2, .texto_solucoes3{
     font-weight: bold;
     font-size: 30px;
     color: #707070; opacity: 90%;
     text-align: center;
+    border: 2px solid black;
+
+
     
+}
+.texto_solucoes3{
+    width: 200px;
+    margin-top: 30px;
+
+}
+
+.img_solutions{
+    border: 2px solid black;
+
+}
+
+.box_solucoes1, .box_solucoes2, .box_solucoes3{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    width: 400px;
+}
+
+
+
+.box_solucoes2{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
+
+.img_solutions_teste{
+    border: 2px solid black;
+    margin-top: -40px;
 }
