--- a/src/components/quemSomos/quemSomos.css
+++ b/src/components/quemSomos/quemSomos.css
@@ -6,11 +6,11 @@
 }
 
 .title_quem_somos{
-    font-size: 2em;
+    font-size: 3.6em;
     color: #585858;
-    margin: 0;
-    padding-top: 5vh;
-    padding-left: 8%;
+    margin: 0px 32px;
+    padding-top: 8vh;
+    border: 4px solid black;
     
 }
 
@@ -22,16 +22,12 @@
 }
 
 .texto_quem_somos{
-    font-size: 1.5em;
-    padding-top: 5%;
-    
-    padding-left: 17%;
+    font-size: 28px;
+    margin-left: 3%;
     color: #585858;
-}
-
-.texto_quem_somos{
-    height: 250px;
-    width: 750px;
+    border: 4px solid black;
+    height: auto;
+    width: 550px;
 }
 
 .icone_quemSomos {
@@ -61,3 +57,73 @@
     border-style: none;
     cursor: pointer;
 }
+
+
+/*
+.o-que-fazemos-container {
+    height: 100vh;
+    padding-left: 8vw;
+    padding-right: 8vw;
+    background-color: #f6f6f6;
+}
+
+.title_quem_somos{
+    font-size: 50px;
+    color: #585858;
+    padding-top: 8%;
+    margin-left: 3%;
+    border: 4px solid black;
+    width: 400px;
+    
+}
+
+.content{
+    display: flex;
+    flex-direction: row;
+    margin-top: 15vh;
+    border: 4px solid black;
+
+
+}
+
+.texto_quem_somos{
+    font-size: 28px;
+    margin-left: 3%;
+    color: #585858;
+    border: 4px solid black;
+    height: auto;
+    width: 550px;
+}
+
+
+
+.icone_quemSomos {
+    padding-right: 20%;
+    
+}
+
+.imagem_quem_somos{
+    margin-left: 10%;
+    height: 250px;
+}
+
+.button{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.button > button{
+    height: 50px;
+    width: 180px;
+    border-radius: 9px;
+    background-color: #465efe;
+    color: white;
+    font-size: 1em;
+    box-shadow: 1px 1px 5px grey;
+    border-style: none;
+    cursor: pointer;
+}
+
+
+*/
