--- a/src/components/solucoes/solutionsComponent.css
+++ b/src/components/solucoes/solutionsComponent.css
@@ -127,10 +127,13 @@
 
 .img_solutions{
     border: 2px solid black;
+    width: 170px;
+    height: 170px;
 
 }
 
 .box_solucoes1, .box_solucoes2, .box_solucoes3{
+    margin-top: 50px;
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -149,7 +152,9 @@
     padding: 20px;
 }
 
-.img_solutions_teste{
+.img_solutions_3{
     border: 2px solid black;
     margin-top: -40px;
+    width: 170px;
+    height: 170px;
 }
