--- a/src/components/solucoes/solutionsComponent.css
+++ b/src/components/solucoes/solutionsComponent.css
@@ -1,4 +1,3 @@
-
 /*.container-solutions{
     height: 10vh;
     width: 100vw;
@@ -58,10 +57,10 @@
 
 .title_solucoes{
     border: 2px solid white;
-    width:310px;
-    font-size: 2.5em;
+    width:400px;
+    font-size: 2.7em;
     color: white;
-    margin-left: 5%;
+    margin-left: 10%;
 }
 
 .container-box{
@@ -77,7 +76,7 @@
 }
 
 .container-solutions{
-    width: 70%;
+    width: 80%;
     height: 70vh;
     background-color: whitesmoke;
     border-radius: 10px;
@@ -91,22 +90,70 @@
 .box_solucoes1 {
     margin-top: 15vh;
     margin-left: 5vw;
+    border: 4px solid black;
+
 }
 
 .box_solucoes2 {
     margin-top: 15vh;
+    border: 4px solid black;
+
     
 }
 
 .box_solucoes3 {
     margin-top: 15vh;
     margin-right: 5vw;
+    border: 4px solid black;
+
 }
 
-.texto_solucoes1{
+.texto_solucoes1, .texto_solucoes2, .texto_solucoes3{
     font-weight: bold;
     font-size: 30px;
     color: #707070; opacity: 90%;
     text-align: center;
+    border: 2px solid black;
+
+
     
+}
+.texto_solucoes3{
+    width: 200px;
+    margin-top: 30px;
+
+}
+
+.img_solutions{
+    border: 2px solid black;
+    width: 170px;
+    height: 170px;
+
+}
+
+.box_solucoes1, .box_solucoes2, .box_solucoes3{
+    margin-top: 50px;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    width: 400px;
+}
+
+
+
+.box_solucoes2{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
+
+.img_solutions_3{
+    border: 2px solid black;
+    margin-top: -40px;
+    width: 170px;
+    height: 170px;
 }
