--- a/src/components/diferencial/diferencial.css
+++ b/src/components/diferencial/diferencial.css
@@ -29,8 +29,8 @@
 .container-diferencial{
     border: 2px solid yellow;
 
-    width: 100%;
-    height: 70vh;
+    width: 95%;
+    height: 65vh;
     border-radius: 10px;
     margin: 0px auto;
     display: flex;
@@ -64,16 +64,12 @@
     opacity: 98%;
     text-align: center;
     border: 2px solid black;
-    margin-top: -5%;
+    margin-top: 5%;
 
 
     
 }
-.texto_diferencial3{
-    width: 300px;
-    margin-top: -5%;
 
-}
 
 .img_diferencial1, .img_diferencial2, .img_diferencial3{
     border: 2px solid black;
@@ -83,6 +79,10 @@
 
 }
 
+.img_diferencial1, .img_diferencial3{
+    margin-top: 7%;
+}
+
 .box_diferencial1, .box_diferencial2, .box_diferencial3{
     margin-top: 50px;
     display:flex;
@@ -90,8 +90,8 @@
     align-items: center;
     justify-content: center;
     padding: 20px;
-    width: 300px;
-    background-color: rgba(6, 167, 216, 0.288);
+    width: 290px;
+    background-color: #B0D7E9;
     border-radius: 20px;
 }
 
@@ -107,6 +107,6 @@
 
 .img_diferencial3{
     border: 2px solid black;
-    width: 250px;
-    height: 250px;
+    width: 220px;
+    height: 220px;
 }
