--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -1,7 +1,7 @@
 .section_form{
     width: 100%;
     height: 100vh;
-    background: linear-gradient(to right, #0aa3e0, #495ff4);
+    background: linear-gradient(to right, #4b61ee, #0aa3e0);
 
 }
 
@@ -9,12 +9,30 @@
     border: 2px solid rgb(48, 47, 47);
     width:500px;
     font-size: 2.7em;
-    color: rgb(66, 66, 66);
+    color: rgb(233, 233, 233);
     margin-left: 10%;
 }
 
 .container_form{
     border: 2px solid rgb(48, 47, 47);
+    width: 50%;
+    height: 70vh;
+    margin-left: 10%;
+
+}
+
+.container_formulario{
+    border: 2px solid rgb(48, 47, 47);
+    display: flex;
+
+}
+
+.box_img_botao{
+    display: flex;
+    flex-direction: column;
+    border: 2px solid rgb(48, 47, 47);
+    margin-left: 7%;
+
 
 }
 
@@ -31,6 +49,11 @@
 }
 
 .img_contato{
-    width: 240px;
-    height: 240px;
+    width: 260px;
+    height: 260px;
+    margin: auto;
+}
+
+.button_form{
+    margin:auto;
 }
