--- a/src/components/quemSomos/quemSomos.css
+++ b/src/components/quemSomos/quemSomos.css
@@ -3,24 +3,114 @@
     padding-left: 8vw;
     padding-right: 8vw;
     background-color: #f6f6f6;
+    border: 2px solid yellow;
 }
+@media (max-width:535px){
+
+    .o-que-fazemos-container {
+        height: 100vh;
+
+    }
+}
+
+@media (min-width:536px) and (max-width:615px){
+    .o-que-fazemos-container {
+        height: 100vh;
+        background-color: yellow;
+
+    }
+}
+
+@media (min-width:616px) and (max-width:870px){
+
+    .o-que-fazemos-container {
+        height: 100vh;
+        background-color: pink;
+
+    }
+
+
+}
+
+
 
 .title_quem_somos{
     font-size: 3.6em;
     color: #585858;
     margin: 0px 32px;
     padding-top: 8vh;
+    border: 2px solid rgb(151, 151, 145);
+}
+
+@media (max-width: 535px){
+
+    .title_quem_somos{
     
+        width:60%;
+        margin: 0px 0px;
+        font-size: 3.3em;
+        align-items: center;
+        padding-top: 2vh;
+
+
+    }
+}
+
+
+@media (max-width:615px){
+
+    .title_quem_somos{
+        padding-top: 1vh;
+        margin-left: 2%;
+    }
+}
+
+@media (min-width:616px) and (max-width:870px){
+
+    .title_quem_somos{
+        padding-top: 1vh;
+        margin-left: 2%;
+    }
+
 }
 
 .content{
     display: flex;
     flex-direction: row;
     margin-top: 15vh;
+    border: 2px solid yellow;
+
 
 }
 
+@media (max-width:535px){
 
+    .content{
+        margin-top: 2%;
+        flex-direction: column;
+        padding: 0px;
+    }
+
+    
+}
+
+@media (max-width:615px){
+
+    .content{
+        margin-top: 2%;
+        flex-direction: column;
+        padding: 0px;
+    }
+}
+
+@media (min-width:616px) and (max-width:870px){
+    .content{
+        margin-top: 2%;
+        flex-direction: column;
+        padding: 0px;
+    }
+
+}
 
 .texto_quem_somos{
     font-size: 28px;
@@ -28,25 +118,122 @@
     color: #585858;
     height: auto;
     width: 550px;
+    border: 2px solid yellow;
+
+}
+@media (max-width:535px){
+
+
+    .texto_quem_somos{
+        width: 90%;
+        margin-left: -1%;
+        font-size: 24px;
+        margin-top: 10px;
+    }
+}
+
+
+@media (max-width:615px){
+
+    .texto_quem_somos{
+        width: 90%;
+    }
+}
+
+@media (min-width:616px) and (max-width:870px){
+
+
+    .texto_quem_somos{
+        width: 90%;
+    }
 }
 
 .icone_quemSomos {
     padding-right: 20%;
     width:300px;
     height:300px;
+    border: 2px solid black;
+
     
+}
+@media (max-width:535px){
+    .icone_quemSomos {
+    
+    padding-right: 0%;
+    width:200px;
+    height:200px;
+    margin: 0px 15%;
+    }
+}
+
+
+
+@media (max-width:615px){
+    .icone_quemSomos {
+    
+    padding-right: 0%;
+    width:200px;
+    height:200px;
+    margin: 0px 15%;
+    }
+}
+
+@media (min-width:616px) and (max-width:870px){
+
+    .icone_quemSomos {
+    
+        padding-right: 0%;
+        width:220px;
+        height:220px;
+        margin: 0px 0px;
+        }
 }
 
 .imagem_quem_somos{
     margin-left: 10%;
     height: 250px;
+    border: 2px solid yellow;
+
+}
+@media (max-width:535px){
+    .imagem_quem_somos{
+        margin-top: -10px;
+        height: 200px;
+
+    }
+}
+
+
+@media (max-width:615px){
+    .imagem_quem_somos{
+        width:60%;
+        margin-top: -10px;
+        height: 200px;
+        margin:auto;
+
+    }
+}
+
+@media (min-width:616px) and (max-width:870px){
+    .imagem_quem_somos{
+        width:220px;
+        margin-top: -10px;
+        height: 230px;
+        margin:auto;
+
+    }
+
 }
 
 .button{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    border: 2px solid yellow;
+
 }
+
+
 
 .button > button{
     height: 50px;
@@ -58,6 +245,8 @@
     box-shadow: 1px 1px 5px grey;
     border-style: none;
     cursor: pointer;
+    border: 2px solid yellow;
+
 }
 
 
