--- a/src/components/solucoes/solutionsComponent.css
+++ b/src/components/solucoes/solutionsComponent.css
@@ -54,6 +54,14 @@
 
 }
 
+@media  (max-width:535px){
+
+
+    .section_solucoes{
+        height: 200vh;
+
+    }
+}
 
 .title_solucoes{
     width:400px;
@@ -82,6 +90,15 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+
+}
+
+@media  (max-width:535px){
+    
+    .container-solutions{
+        flex-direction: column;
+        height:180vh;
+    }
 
 }
 
