--- a/src/components/quemSomos/quemSomos.css
+++ b/src/components/quemSomos/quemSomos.css
@@ -133,10 +133,14 @@
 }
 
 
-@media (max-width:615px){
+@media (min-width:536px) and (max-width:615px){
 
     .texto_quem_somos{
         width: 90%;
+        margin-left: 1%;
+        font-size: 24px;
+        margin-top: 10px;
+    
     }
 }
 
@@ -204,12 +208,13 @@
 }
 
 
-@media (max-width:615px){
+@media (min-width:534px) and (max-width:615px){
     .imagem_quem_somos{
         width:60%;
         margin-top: -10px;
         height: 200px;
         margin:auto;
+        border: 4px solid red;
 
     }
 }
@@ -220,7 +225,6 @@
         margin-top: -10px;
         height: 230px;
         margin:auto;
-
     }
 
 }
