--- a/src/components/solucoes/solutionsComponent.css
+++ b/src/components/solucoes/solutionsComponent.css
@@ -54,7 +54,7 @@
 
 }
 
-@media  (max-width:535px){
+@media  (max-width:900px){
 
 
     .section_solucoes{
@@ -93,7 +93,7 @@
 
 }
 
-@media  (max-width:535px){
+@media  (max-width:900px){
     
     .container-solutions{
         flex-direction: column;
@@ -102,6 +102,14 @@
         border: 2px solid pink;
     }
 
+}
+
+@media(min-width:901px) and (max-width: 1150px){
+    .container-solutions{
+        width: 90%;
+        justify-content: center;
+
+    }
 }
 
 .box_solucoes1 {
@@ -122,7 +130,7 @@
 
 }
 
-@media  (max-width:535px){
+@media  (max-width:900px){
     .box_solucoes3 {
         height: 45vh;
     }
@@ -147,7 +155,7 @@
 
 }
 
-@media  (max-width:535px){
+@media  (max-width:900px){
     .texto_solucoes1, .texto_solucoes2, .texto_solucoes3{
         border: 2px solid black;
         font-size: 25px;
@@ -182,7 +190,7 @@
     padding: 20px;
 }
 
-@media  (max-width:535px){
+@media  (max-width:900px){
     .box_solucoes1, .box_solucoes2, .box_solucoes3{
     
         border: 2px solid black;
@@ -202,9 +210,11 @@
     height: 170px;
 }
 
-@media  (max-width:535px){
+@media  (max-width:900px){
     .img_solutions_3{
         margin-top: 5px;
 
     }
 }
+
+@media(min-width:901px) and (max-width: 1150px){}
