--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100vh;
     background: linear-gradient(to right, #4b61ee, #0aa3e0);
-
+    border: 0.1px solid  #4b61ee0a;
 }
 
 .title_form{
@@ -32,17 +32,6 @@
 
 }
 
-.button_form > button {
-    height: 50px;
-    width: 180px;
-    border-radius: 9px;
-    background-color: #fe9946;
-    color: white;
-    font-size: 1em;
-    box-shadow: 1px 1px 5px grey;
-    border-style: none;
-    cursor: pointer;
-}
 
 .img_contato{
     width: 260px;
@@ -50,6 +39,3 @@
     margin: auto;
 }
 
-.button_form{
-    margin:auto;
-}
