--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -39,3 +39,9 @@
     margin: auto;
 }
 
+#reactHubspotForm0{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    border: 4px solid black;
+}
