--- a/src/components/header/headerComponent.css
+++ b/src/components/header/headerComponent.css
@@ -1,9 +1,8 @@
 .section_header{
     height: 100vh;
-    border: 2px solid black;
+    border: 0.1px solid rgba(8, 164, 254, 0.062);
     background: url('../../assets/imgs/hero.jpg') center center/cover
     no-repeat fixed padding-box #08A2FE;}
-    border: 2px solid black;
 
 
 
@@ -30,7 +29,6 @@
     color: white;
     font-size: 100px;
     width: 300px;
-    border: 2px solid black;
 }
 @media (max-width:650px){
 
@@ -44,7 +42,6 @@
     font-weight: normal;
     width: 400px;
     margin-top: -50px;
-    border: 2px solid black;
 }
 
 .teste_header{
@@ -52,12 +49,10 @@
     display: flex;
     flex-direction: column;
     margin-top: 100px;
-    border: 2px solid black;
 }
 .hero_header{
 
     margin: 0px 130px;
-    border: 2px solid black;
 }
 @media (max-width:650px){
     .hero_header{
@@ -70,14 +65,12 @@
     margin: auto;
     color: white;
     font-size: 14px;
-    border: 2px solid black;
 }
 
 .icone_hero{
     width: 50px;
     height: 50px;
     cursor: pointer;
-    border: 2px solid black;
 }
 
 .link_hero{
@@ -86,7 +79,6 @@
     flex-direction: column;
     align-items: center;
     margin: 40px auto;
-    border: 2px solid black;
 }
 
 
@@ -95,7 +87,6 @@
     display: flex;
     list-style: none;
     justify-content: flex-end;
-    border: 2px solid black;
   }
 
 
@@ -109,11 +100,9 @@
     text-align: center;
     font-size: 14px;
     padding: 0px 30px;
-    border: 2px solid black;
   }
   .menu_list_link:hover {
     border-bottom: 2px solid #03b6fd;
     color:white;
-    border: 2px solid black;
   }
   
