--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.overflowx {
+  overflow-x: hidden;
+}
 /* teste */
