--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -16,12 +16,16 @@
 .container-logo{
     display: flex;
     flex-direction: column;
+    margin-left: 5vw;
 
 }
 
 .icons{
     display: flex;
     flex-direction: row;
+    margin-left: 12vw;
+    font-size: 1.3em;
+    color: #585858;
     
 }
 
@@ -29,4 +33,20 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+}
+
+.container-number{
+    margin-right: 5vw;
+    margin-top: 3vh;
+}
+
+.phone{
+    display: flex;
+    flex-direction: row;
+    
+}
+
+.address{
+    display: flex;
+    flex-direction: row;
 }
