--- a/src/components/solucoes/solutionsComponent.css
+++ b/src/components/solucoes/solutionsComponent.css
@@ -138,7 +138,7 @@
 .texto_solucoes1, .texto_solucoes2{
     font-weight: bold;
     font-size: 30px;
-    color: #707070; opacity: 90%;
+    color: #707070;
     text-align: center;
 
 
@@ -147,7 +147,7 @@
 .texto_solucoes3{
     font-weight: bold;
     font-size: 30px;
-    color: #707070; opacity: 90%;
+    color: #707070; 
     text-align: center;
     width: 200px;
     margin-top: 30px;
