--- a/src/components/quemSomos/quemSomos.css
+++ b/src/components/quemSomos/quemSomos.css
@@ -8,13 +8,16 @@
 
     .o-que-fazemos-container {
         height: 100vh;
-
+        width: 100%;
+        
     }
 }
 
 @media (min-width:536px) and (max-width:615px){
     .o-que-fazemos-container {
         height: 100vh;
+        width: 100%;
+        
 
     }
 }
@@ -23,6 +26,8 @@
 
     .o-que-fazemos-container {
         height: 100vh;
+        width: 100%;
+        
 
     }
 
@@ -74,6 +79,7 @@
     display: flex;
     flex-direction: row;
     margin-top: 15vh;
+    justify-content: space-evenly;
 
 
 }
@@ -230,12 +236,12 @@
 
 
 .button > button{
-    height: 50px;
-    width: 250px;
+    height: 60px;
+    width: 300px;
     border-radius: 9px;
     background-color: #465efe;
     color: white;
-    font-size: 1em;
+    font-size: 1.5em;
     box-shadow: 1px 1px 5px grey;
     border-style: none;
     cursor: pointer;
