--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -29,6 +29,44 @@
     
 }
 
+.icons > a {
+    color: inherit;
+}
+
+.icon-1{
+    background-color: #3CC0F0;
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    display: flex;
+    justify-content: center;
+    margin-right: 5px;
+    
+}
+
+.icon-2{
+    background-color: #3CC0F0;
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    display: flex;
+    justify-content: center;
+    margin-right: 5px;
+
+    
+}
+
+.icon-3{
+    background-color: #3CC0F0;
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    display: flex;
+    justify-content: center;
+    margin-right: 5px;
+    
+}
+
 .final-footer{
     display: flex;
     flex-direction: row;
