tirei imagem do header

--- a/src/components/header/headerComponent.css
+++ b/src/components/header/headerComponent.css
@@ -1,8 +1,8 @@
 .section_header{
     height: 100vh;
     border: 0.1px solid rgba(8, 164, 254, 0.062);
-    background: url('../../assets/imgs/hero.jpg') center center/cover
-    no-repeat fixed padding-box #08A2FE;}
+    background: linear-gradient(to right, #4b61ee, #0aa3e0);
+}
 
 
 
