--- a/src/components/solucoes/solutionsComponent.css
+++ b/src/components/solucoes/solutionsComponent.css
@@ -160,7 +160,7 @@
 
 @media  (max-width:900px){
     .texto_solucoes1, .texto_solucoes2, .texto_solucoes3{
-        font-size: 25px;
+        font-size: 20px;
         
     }
 }
@@ -171,6 +171,14 @@
     width: 170px;
     height: 170px;
 
+}
+@media  (max-width:900px){
+
+    .img_solutions{
+        width: 120px;
+        height: 120px;
+    
+    }
 }
 
 .box_solucoes1, .box_solucoes2, .box_solucoes3{
@@ -200,6 +208,7 @@
         width: 80%;
         margin-left: auto;
         margin-right: auto;
+        border: 2px solid black;
         
 
     }
@@ -215,7 +224,10 @@
 @media  (max-width:900px){
     .img_solutions_3{
         margin-top: 5px;
-        
+        border: 2px solid black;
+        width: 120px;
+        height: 120px;
+
     }
 }
 
