--- a/src/components/header/headerComponent.css
+++ b/src/components/header/headerComponent.css
@@ -5,7 +5,7 @@
 }
 @media (max-width:650px){
     .section_header{
-        height: 70vh;
+        height: 100vh;
     }
 }
 
@@ -110,7 +110,7 @@
         }
     
     .link_hero{
-        margin-top:13%;
+        margin-top:50%;
     }
 }
 
@@ -144,6 +144,7 @@
   @media (max-width:650px){
     .menu_list_link{
         font-size: 10px;
+        padding: 0px 10px;
 
     }
 }
