--- a/src/components/solucoes/solutionsComponent.css
+++ b/src/components/solucoes/solutionsComponent.css
@@ -80,6 +80,9 @@
     .title_solucoes{
         font-size: 2.0em;
         font-weight: 500;
+        margin: 5% auto;
+        border: 2px solid black;
+        width:250px;
 
     }
 }
@@ -243,7 +246,7 @@
     .box_solucoes1, .box_solucoes2, .box_solucoes3{
     
         padding: 5px;
-        width: 50%;
+        width: 55%;
         margin-left: auto;
         margin-right: auto;
         background-color: rgba(241, 239, 239, 0.925);
@@ -280,12 +283,13 @@
     .img_solutions_3{
         width:80px;
         height:80px;
+        margin-top:0px;
     }
 }
 
 @media (min-width:652px) and (max-width:900px){
     .img_solutions_3{
-        margin-top: 5px;
+        margin-top: 0px;
         border: 2px solid black;
         width: 120px;
         height: 120px;
