--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -4,7 +4,11 @@
     background: linear-gradient(to right, #4b61ee, #0aa3e0);
     border: 0.1px solid  #4b61ee0a;
 }
-
+@media (max-width:830px){
+    .section_form{
+    height: 80vh;
+    }
+}
 
 .title_form{
     width:500px;
@@ -14,11 +18,12 @@
 }
 @media (max-width:830px){
     .title_form{
-        margin-left: auto;
-        margin-right: auto;
-        font-size: 2.3em;
-        width:430px;
-
+        margin: 0px auto;
+        font-size: 1.7em;
+        align-items: center;
+        padding-top: 4vh;
+        font-weight: 500;
+        width:300px;
 
 
     }
