--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -17,15 +17,16 @@
     display: flex;
     flex-direction: column;
     margin-left: 5vw;
+    margin-left:-10%;
 
 }
 
 .icons{
     display: flex;
     flex-direction: row;
-    margin-left: 12vw;
     font-size: 1.3em;
     color: #000000;
+    margin: 0px auto;
     
 }
 
@@ -88,15 +89,55 @@
 .container-number{
     margin-right: 5vw;
     margin-top: 3vh;
+    display:flex;
+    flex-direction:row;
+    width:40%;
 }
 
 .phone{
     display: flex;
     flex-direction: row;
-    
+    width:200px;
 }
 
 .address{
     display: flex;
     flex-direction: row;
+}
+
+.img_zawee{
+    width:200px;
+}
+
+@media (max-width:650px){
+    .img_zawee{
+        width:110px;
+        height:50px;
+    }
+    .container-logo{
+        height:15vh;
+        margin:0px 10%;
+    }
+
+    .container-number{
+        flex-direction: column;
+        margin-top:4%;
+        height: 10vh;
+    }
+
+    p{
+        font-size:10px;
+    }
+
+    .container-footer{
+        height: 15vh;
+    }
+    .footer{
+        height: 18vh;
+    }
+    .final-footer{
+        margin-top: -3%;
+    }
+
+    
 }
