--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -81,6 +81,7 @@
 }
 
 .final-footer{
+    margin-top: -3%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -106,7 +107,7 @@
 }
 
 .img_zawee{
-    width:300px;
+    width:250px;
 }
 
 @media (max-width:650px){
@@ -141,3 +142,4 @@
 
     
 }
+
