--- a/src/components/header/headerComponent.css
+++ b/src/components/header/headerComponent.css
@@ -57,6 +57,7 @@
 
     .legenda_header{
         font-size: 15px;
+        margin-left:13%;
     }
 }
 
@@ -96,7 +97,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 40px auto;
+    margin: -3% auto;
     padding-top: 100px;
 }
 
@@ -114,7 +115,7 @@
         }
     
     .link_hero{
-        margin-top:50%;
+        margin-top:4%;
     }
 }
 
