ajuste no header

--- a/src/components/header/headerComponent.css
+++ b/src/components/header/headerComponent.css
@@ -97,7 +97,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: -3% auto;
+    margin-right:auto;
+    margin-left:auto;
+    margin-top: -1%;
     padding-top: 100px;
 }
 
