--- a/src/components/diferencial/diferencial.css
+++ b/src/components/diferencial/diferencial.css
@@ -1,7 +1,7 @@
 .section_diferencial{
     background-color: whitesmoke;
     width: 100%;
-    height: 120vh;
+    height: 105vh;
 
 }
 .title_diferencial{
@@ -10,25 +10,6 @@
     color: rgb(66, 66, 66);
     margin-left: 10%;
 }
-@media  (max-width:900px){
-    .section_diferencial{
-        height: 180vh;
-    }
-
-    .title_diferencial{
-        font-size: 2.0em;
-        font-weight: 500;
-        margin: 5% auto;
-        width:270px;
-    }
-}
-
-@media(min-width:901px) and (max-width: 1220px){
-    .section_diferencial{
-        height: 110vh;
-    }
-}
-
 
 
 .container_box{
@@ -50,39 +31,14 @@
     margin: 0px auto;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
 
 }
 
-@media  (max-width:900px){
-    .container-diferencial{
-        height:230vh;
-        flex-direction: column;
-        justify-content: center;
-    }
-}
-
-.box_diferencial1 {
-    margin-top: 15vh;
-    margin-left: 5vw;
-
-}
-
-.box_diferencial2 {
-    margin-top: 15vh;
-
-    
-}
-
-.box_diferencial3 {
-    margin-top: 15vh;
-    margin-right: 5vw;
-
-}
 
 .texto_diferencial1, .texto_diferencial2, .texto_diferencial3{
     font-weight: 500;
-    font-size: 26px;
+    font-size: 22px;
     color: rgb(247, 240, 240);
     text-align: center;
     margin-top: 5%;
@@ -94,11 +50,114 @@
 
 .img_diferencial1, .img_diferencial2, .img_diferencial3{
 
-    width: 220px;
-    height: 220px;
+    width: 150px;
+    height: 150px;
     margin-top: 15%;
 
 }
+.img_diferencial1, .img_diferencial3{
+    margin-top: 7%;
+}
+
+.box_diferencial1, .box_diferencial2, .box_diferencial3{
+    margin: 2% 1%;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    width: 240px;
+    height:270px;
+    background-color: rgb(95, 147, 224);       
+    border-radius: 20px;
+}
+
+@media(max-width:720px){
+    .img_diferencial1, .img_diferencial2, .img_diferencial3{
+
+        width: 80px;
+        height: 80px;
+    
+    }
+    .title_diferencial{
+        width:250px;
+        font-size: 1.8em;
+        margin: 4% auto;
+    }
+    
+    .texto_diferencial1, .texto_diferencial2, .texto_diferencial3{
+        font-weight: 500;
+        font-size: 16px;    
+    }
+
+    .box_diferencial1, .box_diferencial2, .box_diferencial3{
+        padding: 20px;
+        width: 150px;
+        height:190px;
+        margin:2% auto;
+        
+    }
+    .section_diferencial{
+        
+        height: 130vh;
+    
+    }
+
+    .container_box{
+        height: 125vh;
+        
+    }
+    .container-diferencial{
+
+        width: 95%;
+        height: 100vh;
+        border-radius: 10px;
+        margin: 0px auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    
+    }
+}
+
+
+
+
+
+
+
+/*
+@media  (max-width:900px){
+    .section_diferencial{
+        height: 180vh;
+    }
+
+    .title_diferencial{
+        font-size: 2.0em;
+        font-weight: 500;
+        margin: 5% auto;
+        width:270px;
+    }
+}
+
+@media(min-width:901px) and (max-width: 1220px){
+    .section_diferencial{
+        height: 110vh;
+    }
+}
+
+*/
+
+/*
+@media  (max-width:900px){
+    .container-diferencial{
+        height:230vh;
+        flex-direction: column;
+        justify-content: center;
+    }
+}
+*/
+
+/*
 @media (max-width:900px){
     .img_diferencial2{
         width:100px;
@@ -119,23 +178,9 @@
     height: 180px;
     }
 }
+*/
 
-.img_diferencial1, .img_diferencial3{
-    margin-top: 7%;
-}
-
-.box_diferencial1, .box_diferencial2, .box_diferencial3{
-    margin-top: 50px;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-    width: 290px;
-    background-color: rgb(95, 147, 224);       
-    border-radius: 20px;
-}
-
+/*
 @media  (max-width:900px){
     .box_diferencial1, .box_diferencial3{
         margin-left: auto;
