--- a/src/components/quemSomos/quemSomos.css
+++ b/src/components/quemSomos/quemSomos.css
@@ -55,8 +55,8 @@
     }
 
     .icone_quemSomos {
-        width:150px;
-        height:150px;
+        width:130px;
+        height:130px;
     }
 
     .texto_quem_somos{
@@ -65,6 +65,7 @@
         font-weight: 500;
         width:60%;
         text-align:center;
+        margin-top:-4%;
     }
     .title_quem_somos{
         padding:4% 0%;
