--- a/src/components/solucoes/solutionsComponent.css
+++ b/src/components/solucoes/solutionsComponent.css
@@ -151,7 +151,7 @@
         height:120vh;
     }
     .title_solucoes{
-        width:250;
+        width:250px;
         font-size: 2.0em;
         font-weight: 700;
         margin: 4% auto;
