--- a/src/components/diferencial/diferencial.css
+++ b/src/components/diferencial/diferencial.css
@@ -134,6 +134,24 @@
         justify-content: center;
     
     }
+
+
+    .button{
+        width:150px;
+        margin: 4% auto;
+    }
+    
+    .button > button{
+        height: 40px;
+        width: 150px;
+        border-radius: 9px;
+        background-color: #465efe;
+        color: white;
+        font-size: 1em;
+        box-shadow: 1px 1px 5px grey;
+        border-style: none;
+        cursor: pointer;
+    }   
 }
 
 
