--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -8,71 +8,58 @@
 
 .title_form{
     width:500px;
-    font-size: 2.7em;
+    font-size: 2.3em;
     color: rgb(233, 233, 233);
     margin-left: 10%;
 }
-@media (max-width:830px){
-    .title_form{
-        margin: 0px auto;
-        font-size: 1.7em;
-        align-items: center;
-        padding-top: 4vh;
-        font-weight: 500;
-        width:300px;
-
-
-    }
-}
 
 .container_form{
-    width: 50%;
-    height: 70vh;
-    margin-left: 10%;
-
-}
-@media (max-width:830px){
-    .container_form{
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        margin-left: 0%;
-
-    }
+    width: 40%;
+    margin: 0% 6%;
 }
 
-
-
-
-.box_img_botao{
-    display: flex;
-    flex-direction: column;
-    margin-left: 7%;
-
-
-}
-@media (min-width:831px){
-    .box_img_botao{
-        margin-top: -30%;
-        margin-left: 10%;
-
-    }
-}
 
 
 .img_contato{
-    width: 260px;
-    height: 260px;
-    margin-left: 60%;
+    width: 240px;
+    height: 240px;
+    
 }
-@media (max-width:830px){
-    .img_contato{
-        width:170px;
-        height: 170px;
-        margin-left: 55%;
-        margin-top: -30%;
+
+.box_img_botao{
+    width:240px;
+    margin-top: -30%;
+    margin-left: 60%;   
+}
+
+
+@media (max-width:720px) {
+    .section_form{
+        width: 100%;
+        height: 120vh;
+       
+    }
+    .box_img_botao{
+        visibility: hidden;
+    }
+
+    .container_form{
+        margin: 2% auto;
+        height:90vh;
+        width:70%;
+    }
+
+    .title_form{
+        width:500px;
+        font-size: 1.8em;
+        color: rgb(233, 233, 233);
+        width:200px;
+        text-align: center;
+        margin: 6% auto;
     }
 }
+
+
 
 @media (max-width:1024px){
     .box_img_botao{
@@ -84,16 +71,5 @@
         visibility: hidden;
     }
 }
-#reactHubspotForm0{
-    
-}
 
-@media (max-width:830px){
-    #reactHubspotForm0{
-        width: 90%;
-        margin-left: auto;
-        margin-right: auto;
-
-    }
-}
 
